--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
 .navbar {
     padding: 10px;
 }
+
+#container {
+    display: flex;
+}
+
+#container > div {
+    padding: 20px;
+    margin: 20px;
+    justify-content: center;
+}
