--- a/main.css
+++ b/main.css
@@ -2,12 +2,9 @@
     padding: 10px;
 }
 
-#container {
-    display: flex;
-}
-
-#container > div {
-    padding: 20px;
-    margin: 20px;
-    justify-content: center;
+input[type="text"] {
+    width: 60%;
+    font-size: 16px;
+    height: 44px;
+    border-radius: 10px;
 }
